info about branches added to courses

--- a/czechitas/courses/templates/course_list.html
+++ b/czechitas/courses/templates/course_list.html
@@ -1,5 +1,10 @@
+<h2>Seznam kurzů</h2>
+<p>Zde vidíte aktuální nabídku kurzů</p>
 <ul>
   {% for item in object_list %}
-  <li>{{ item.name }}</li>
+  <li>
+    {{ item.branch }}: 
+    <a href="{% url 'course_detail' item.pk %}">{{ item.name }}</a>
+  </li>
   {% endfor %}
 </ul>
