--- a/czechitas/courses/templates/branch_list.html
+++ b/czechitas/courses/templates/branch_list.html
@@ -1,5 +1,9 @@
 <ul>
   {% for item in object_list %}
-  <li>{{ item.city }}</li>
+    <li>
+      <a href="{% url 'branch_detail' item.pk %}">
+        {{ item.city }}
+      </a>
+    </li>
   {% endfor %}
 </ul>
