nav links added to index.html

--- a/czechitas/courses/templates/index.html
+++ b/czechitas/courses/templates/index.html
@@ -1,1 +1,10 @@
+<nav>
+  <a href="{% url 'index' %}">Domů</a> |
+  <a href="{% url 'course_list' %}">Kurzy</a> |
+  <a href="{% url 'branch_list' %}">Pobočky</a> |
+  <a href="{% url 'person_list' %}">Zaměstnanci</a> |
+  <a href="{% url 'contacts' %}">Kontakty</a> |
+  <a href="{% url 'about' %}">O nás</a>
+</nav>
+
 <h1>Vítejte na webu Czechitas!</h1>
