--- a/czechitas/courses/templates/index.html
+++ b/czechitas/courses/templates/index.html
@@ -1,6 +1,7 @@
 <nav>
   <a href="{% url 'index' %}">Domů</a> |
   <a href="{% url 'course_list' %}">Kurzy</a> |
+  <a href="{% url 'application_create' %}">Přihláška</a> |
   <a href="{% url 'branch_list' %}">Pobočky</a> |
   <a href="{% url 'person_list' %}">Zaměstnanci</a> |
   <a href="{% url 'contacts' %}">Kontakty</a> |
