--- a/czechitas/courses/templates/contacts.html
+++ b/czechitas/courses/templates/contacts.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h1>Kontakty</h1>
 
 <p>
@@ -6,3 +11,5 @@
   110 00<br />
   Česká republika
 </p>
+
+{% endblock %}
