--- a/czechitas/courses/templates/course_detail.html
+++ b/czechitas/courses/templates/course_detail.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h2>{{ object.name }}</h2>
 
 <h3>Kdy</h3>
@@ -15,3 +20,8 @@
 <p>{{ object.price }} Kč</p>
 
 <p>{{ object.description }}</p>
+
+{% url 'application' object.pk as target_url %}
+{% bootstrap_button "Přihlásit se" href=target_url button_type="link" button_class="btn-info" %}
+
+{% endblock %}
