--- a/czechitas/courses/templates/about.html
+++ b/czechitas/courses/templates/about.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h1>Ženy do IT!</h1>
 
 <p>
@@ -20,3 +25,5 @@
   Se znalostmi IT můžeš získat novou práci, zlepšit se v té současné nebo si
   založit vlastní projekt. Objevuj svět IT s námi.
 </p>
+
+{% endblock %}
