--- a/czechitas/courses/templates/application_confirmation.html
+++ b/czechitas/courses/templates/application_confirmation.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h2>Potvrzujeme přijetí přihlášky</h2>
 
 <p>V nejbližší době se ti ozveme s dalšími informacemi.</p>
+
+{% endblock %}
