--- a/czechitas/courses/templates/base.html
+++ b/czechitas/courses/templates/base.html
@@ -6,7 +6,7 @@
 <nav>
   <a href="{% url 'index' %}">Domů</a> |
   <a href="{% url 'course_list' %}">Kurzy</a> |
-  <a href="{% url 'application_create' %}">Přihláška na kurz</a> |
+  <a href="{% url 'application_create' object.pk as target_url %}">Přihláška na kurz</a> |
   <a href="{% url 'person_register' %}">Přihláška do týmu</a> |
   <a href="{% url 'branch_list' %}">Pobočky</a> |
   <a href="{% url 'person_list' %}">Zaměstnanci</a> |
