--- a/czechitas/courses/templates/course_list.html
+++ b/czechitas/courses/templates/course_list.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h2>Seznam kurzů</h2>
 <p>Zde vidíte aktuální nabídku kurzů</p>
 <ul>
@@ -8,3 +13,5 @@
   </li>
   {% endfor %}
 </ul>
+
+{% endblock %}
