--- a/czechitas/courses/templates/person_list.html
+++ b/czechitas/courses/templates/person_list.html
@@ -1,5 +1,14 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
+<h2>Seznam zaměstnanců</h2>
+
 <ul>
   {% for item in object_list %}
   <li>{{ item.surname }}, {{ item.name }}</li>
   {% endfor %}
 </ul>
+
+{% endblock %}
