--- a/czechitas/courses/templates/person_register.html
+++ b/czechitas/courses/templates/person_register.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% load bootstrap4 %}
+
+{% block content %}
+
 <h2>Přihláška do týmu Czechitas</h2>
 
 <form method="post">
@@ -5,3 +10,5 @@
   {{ form.as_p }}
   <input type="submit" value="Odeslat přihlášku" />
 </form>
+
+{% endblock %}
